objects/Delivery__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ema_Address__c</fullName>
        <label>Ema Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Deliveries</relationshipLabel>
        <relationshipName>Deliveries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Delivery</label>
    <nameField>
        <displayFormat>Dlvy-{0000}</displayFormat>
        <label>Delivery No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deliveries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>